--- a/senha.css
+++ b/senha.css
@@ -19,3 +19,10 @@ div.tentativa {
   background: white;
   border: 3px solid red;
 }
+div .dica{
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  background: gray;
+  border: 3px solid black;
+}
